공통 인풋 수정

--- a/src/components/input.html
+++ b/src/components/input.html
@@ -51,7 +51,7 @@
 						<div class="ip-wrap">
 							<div class="ip-group">
 								<label for="ip01" class="ip-label">추천인 아이디</label>
-								<div class="row ico">
+								<div class="row">
 									<div class="module-ip">
 										<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
 										<div class="line"></div>
@@ -114,6 +114,33 @@
 										<button type="button" class="btn-del">
 											<i class="ico delete lg"></i>
 										</button>
+									</div>
+								</div>
+							</div>
+
+							<div class="ip-group">
+								<div class="row">
+									<div class="module-ico">
+										<i class="ico search lg"></i>
+									</div>
+									<div class="module-ip">
+										<input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력">
+										<div class="line"></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="ip-group">
+								<div class="row">
+									<div class="gc-select">
+                                        <select name="" id="">
+                                            <option>지역선택</option>
+                                            <option>서울</option>
+                                        </select>
+                                    </div>
+									<div class="module-ip">
+										<input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력">
+										<div class="line"></div>
 									</div>
 								</div>
 							</div>
