scss background-image 변수입력 방식 수정

--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -349,7 +349,7 @@
             &:focus {
                 outline: none;
             }
-            background-image: url("" + $url-ico + "icon_list_open_arrow.svg");
+            background-image: url(#{$url-ico}icon_list_open_arrow.svg);
         }
         &::after {
             content: " ";
