--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -97,11 +97,11 @@ input[type="number"]::-webkit-inner-spin-button {
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 300;
-	src: url($url-fonts+'NotoSansKR-Light.eot');/* IE9 Compat Modes */
+	src: url(#{$url-fonts}NotoSansKR-Light.eot);/* IE9 Compat Modes */
 	src: local('Noto Sans KR Light'),
-		 url($url-fonts+'NotoSansKR-Light.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-		 url($url-fonts+'NotoSansKR-Light.woff2') format('woff2'),/* Super Modern Browsers */
-		 url($url-fonts+'NotoSansKR-Light.woff') format('woff');/* Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Light.eot?#iefix) format('embedded-opentype'),/* IE6-IE8 */
+		 url(#{$url-fonts}NotoSansKR-Light.woff2) format('woff2'),/* Super Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Light.woff) format('woff');/* Modern Browsers */
 }
 
 /* NotoSansKR-Regular */
@@ -109,11 +109,11 @@ input[type="number"]::-webkit-inner-spin-button {
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 400;
-	src: url($url-fonts+'NotoSansKR-Regular.eot');/* IE9 Compat Modes */
+	src: url(#{$url-fonts}NotoSansKR-Regular.eot);/* IE9 Compat Modes */
 	src: local('Noto Sans KR Regular'),
-		 url($url-fonts+'NotoSansKR-Regular.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-		 url($url-fonts+'NotoSansKR-Regular.woff2') format('woff2'),/* Super Modern Browsers */
-		 url($url-fonts+'NotoSansKR-Regular.woff') format('woff');/* Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Regular.eot?#iefix) format('embedded-opentype'),/* IE6-IE8 */
+		 url(#{$url-fonts}NotoSansKR-Regular.woff2) format('woff2'),/* Super Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Regular.woff) format('woff');/* Modern Browsers */
 }
 
 /* NotoSansKR-Medium */
@@ -121,11 +121,11 @@ input[type="number"]::-webkit-inner-spin-button {
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 500;
-	src: url($url-fonts+'NotoSansKR-Medium.eot');/* IE9 Compat Modes */
+	src: url(#{$url-fonts}NotoSansKR-Medium.eot);/* IE9 Compat Modes */
 	src: local('Noto Sans KR Medium'),
-		 url($url-fonts+'NotoSansKR-Medium.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-		 url($url-fonts+'NotoSansKR-Medium.woff2') format('woff2'),/* Super Modern Browsers */
-		 url($url-fonts+'NotoSansKR-Medium.woff') format('woff');/* Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Medium.eot?#iefix) format('embedded-opentype'),/* IE6-IE8 */
+		 url(#{$url-fonts}NotoSansKR-Medium.woff2) format('woff2'),/* Super Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Medium.woff) format('woff');/* Modern Browsers */
 }
 
 /* NotoSansKR-Bold */
@@ -133,11 +133,11 @@ input[type="number"]::-webkit-inner-spin-button {
 	font-family: 'Noto Sans KR';
 	font-style: normal;
 	font-weight: 700;
-	src: url($url-fonts+'NotoSansKR-Bold.eot');/* IE9 Compat Modes */
+	src: url(#{$url-fonts}NotoSansKR-Bold.eot);/* IE9 Compat Modes */
 	src: local('Noto Sans KR Bold'),
-		 url($url-fonts+'NotoSansKR-Bold.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-		 url($url-fonts+'NotoSansKR-Bold.woff2') format('woff2'),/* Super Modern Browsers */
-		 url($url-fonts+'NotoSansKR-Bold.woff') format('woff');/* Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Bold.eot?#iefix) format('embedded-opentype'),/* IE6-IE8 */
+		 url(#{$url-fonts}NotoSansKR-Bold.woff2) format('woff2'),/* Super Modern Browsers */
+		 url(#{$url-fonts}NotoSansKR-Bold.woff) format('woff');/* Modern Browsers */
 }
 
 .clfix:after {
@@ -292,7 +292,7 @@ textarea {
         &:checked {
             &~label {
                 &:not(:last-child) {
-                    background-image: url(''+$url-ico+'star.svg');
+                    background-image: url(#{$url-ico}star.svg);
                 }
             }
 
@@ -302,7 +302,7 @@ textarea {
                 }
 
                 &:not(:last-child):before {
-                    background-image: url(''+$url-ico+'star.svg');
+                    background-image: url(#{$url-ico}star.svg);
                     opacity: 0;
                     transform: scale(2);
                 }
@@ -325,7 +325,7 @@ textarea {
         }
 
         &:not(:last-child) {
-            background-image: url(''+$url-ico+'star_off.svg');
+            background-image: url(#{$url-ico}star_off.svg);
 
             &:before {
                 content: '';
