--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -209,7 +209,7 @@ hr.divider {
             border: 1px solid $navy-020;
             border-radius: $border-radius;
             position: relative;
-            background: url(../images/common/bg_g_mark.svg) no-repeat right 18px;
+            background: url(#{$url-common}bg_g_mark.svg) no-repeat right 18px;
             .discount-type {
                 display: inline-flex;
                 align-items: center;
