--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -19,7 +19,8 @@
         }
     }
     section {
-        padding-bottom: 32px;
+        padding-bottom: 24px;
+        position: relative;
         h3 {
             color: $navy-070;
             font-size: 18px;
@@ -362,18 +363,6 @@
     }
 }
 
-.terms {
-    .item {
-        @include flex-center;
-        .text {
-            font-size: 16px;
-            font-weight: 500;
-        }
-        .ico {
-            margin-left: auto;
-        }
-    }
-}
 .search-wrap {
     .row {
         @include flex-center;
@@ -523,5 +512,101 @@
         &:first-child {
             margin-left: 0;
         }
+    }
+}
+
+// 파일첨부
+.file-attach {
+    position: relative;
+    .file-wrap {
+        display: flex;
+        justify-content: space-between;
+        .item {
+            width: 72px;
+            list-style: none;
+            &.attached {
+                .btn {
+                    position: absolute;
+                    top: 12px;
+                    right: 4px;
+                }
+                &::after {
+                    display: none;
+                }
+            }
+            .item-preview {
+                width: 72px;
+                height: 72px;
+                border: 1px solid $navy-020;
+                border-radius: $border-radius;
+                justify-content: center;
+                @include flex-center;
+                position: relative;
+                overflow: hidden;
+                &::after {
+                    content: " ";
+                    display: block;
+                    width: 24px;
+                    height: 24px;
+                    background-image: url(#{$url-ico}icon_camera_gray.svg);
+                }
+            }
+            .item-info {
+                color: $navy-040;
+                font-size: 12px;
+                line-height: 16px;
+                text-align: center;
+                margin-top: 8px;
+            }
+        }
+        .item-counter {
+            position: absolute;
+            top: 0px;
+            right: 0;
+            color: $navy-040;
+            font-size: 16px;
+        }
+    }
+    .desc {
+        font-size: 16px;
+        color: $navy-040;
+        margin-top: 8px;
+    }
+}
+
+// 모바일 문의
+.inquiry-list {
+    .item {
+        padding: 16px 0;
+        .date {
+            color: $navy-070;
+            font-size: 14px;
+        }
+        .title {
+            margin-top: 8px;
+            @include flex-center;
+            > div {
+                @include flex-center;
+            }
+            .left {
+                gap: 8px;
+                strong {
+                    font-size: 16px;
+                }
+            }
+            .right {
+                margin-left: auto;
+            }
+        }
+        .content {
+            p {
+                color: $navy-040;
+                margin-top: 4px;
+                @include ell;
+            }
+        }
+    }
+    .item + .item {
+        border-top: 1px solid $navy-020;
     }
 }
