--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -190,37 +190,38 @@
             }
         }
     }
-    &-number {
-        li {
-            position: relative;
-            margin-top: 8px;
-            padding-left: 16px;
-            text-indent: -14px;
-            font-size: $font-sm2;
-            line-height: 20px;
-            color: $navy-040;
-            &:first-child {
-                margin-top: 0;
-            }
-        }
-    }
+    // &-number {
+    //     li {
+    //         position: relative;
+    //         margin-top: 8px;
+    //         padding-left: 16px;
+    //         text-indent: -14px;
+    //         font-size: $font-sm2;
+    //         line-height: 20px;
+    //         color: $navy-040;
+    //         &:first-child {
+    //             margin-top: 0;
+    //         }
+    //     }
+    // }
     &.numeric {
-		counter-reset: section;
+        counter-reset: section;
         li {
             display: flex;
-			list-style: none;
+            list-style: none;
+            padding-left: 0;
             &:before {
-				counter-increment: section;
+                counter-increment: section;
                 content: counter(section) ".";
-				display: inline-block;
-				width: initial;
-				height: initial;
-				margin-right: 4px;
-				border-radius: initial;
-				background-color: initial;
-				position: static;
-				top: initial;
-				left: initial;
+                display: inline-block;
+                width: initial;
+                height: initial;
+                margin-right: 4px;
+                border-radius: initial;
+                background-color: initial;
+                position: static;
+                top: initial;
+                left: initial;
             }
         }
     }
