--- a/src/components/text.html
+++ b/src/components/text.html
@@ -1,115 +1,117 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-@@include('@@webRoot/include/head.html')
-<style>
-.contents {
-	padding: 20px 40px 20px !important;
-}
-.module{
-	display:flex;
-	flex-wrap: wrap;
-}
-.contents .tmp-guide-box {
-	margin-left: 0;
-	margin-right: 0;
-}
-h2 {
-	margin-bottom: 20px;
-	font-size: 30px;
-}
+    <head>
+        @@include('@@webRoot/include/head.html')
+        <style>
+            .contents {
+                padding: 20px 40px 20px !important;
+            }
+            .module {
+                display: flex;
+                flex-wrap: wrap;
+            }
+            .contents .tmp-guide-box {
+                margin-left: 0;
+                margin-right: 0;
+            }
+            h2 {
+                margin-bottom: 20px;
+                font-size: 30px;
+            }
+            h3 {
+                margin-bottom: 8px;
+                margin-top: 16px;
+            }
 
-.tmp-guide-box{
-	flex:1;
-	width:360px;
-	flex-basis: 360px;
-	max-width: 360px;
-	margin-right:40px !important;
-	box-sizing: border-box;
-}
-.btn{display:inline-flex}
-</style>
-</head>
-<body>
-	<div id="wrap">
-		
-		<!-- container -->
-		<section id="container">
-			<div class="contents">
-				<h2>TEXT</h2>
+            .tmp-guide-box {
+                flex: 1;
+                width: 360px;
+                flex-basis: 360px;
+                max-width: 360px;
+                margin-right: 40px !important;
+                box-sizing: border-box;
+            }
+            .btn {
+                display: inline-flex;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="wrap">
+            <!-- container -->
+            <section id="container">
+                <div class="contents">
+                    <h2>TEXT</h2>
 
-				<div class="module">
+                    <div class="module">
+                        <div class="tmp-guide-box guide-btn">
+                            <h2 class="guide-box-tit">Text Etc</h2>
 
-					<div class="tmp-guide-box guide-btn">
-						<h2 class="guide-box-tit">Text Etc</h2>
+                            <span class="tag">세차완료</span>
+                            <span class="tag sale">세차완료</span>
+                            <span class="deco-througt">본문내용</span>
+                        </div>
 
-						<span class="tag">세차완료</span>
-						<span class="tag sale">세차완료</span>
-						<span class="deco-througt">본문내용</span>
-					</div>
+                        <!-- Title -->
+                        <div class="tmp-guide-box guide-btn">
+                            <h2 class="guide-box-tit">Title</h2>
 
-					<!-- Title -->
-					<div class="tmp-guide-box guide-btn">
-						<h2 class="guide-box-tit">Title</h2>
-						
-						<h1 class="title">Title1 20px</h1>
-						<h1 class="title-md">Title2 18px</h1>
-						<h1 class="title-sm">Title3 16px</h1>
-					</div>
-					<!-- //Title -->
-	
-					<!-- Title -->
-					<div class="tmp-guide-box guide-btn">
-						<h2 class="guide-box-tit">Description</h2>
-						
-						<p class="desc-xs"><b>xs 10px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
-						<br>
-						<p class="desc-sm"><b>sm 12px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
-						<br>
-						<p class="desc"><b>default 14px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
-						<br>
-						<p class="desc-xl"><b>md 16px</b>본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
-						<br>
-						<p class="desc-xl"><b>xl 20px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
-					</div>
-					<!-- //Title -->
-					
-					<!-- List -->
-					<div class="tmp-guide-box guide-btn">
-						<h2 class="guide-box-tit">List</h2>
+                            <h1 class="title">Title1 20px</h1>
+                            <h1 class="title-md">Title2 18px</h1>
+                            <h1 class="title-sm">Title3 16px</h1>
+                        </div>
+                        <!-- //Title -->
 
-						<div class="txt-list">
-							<ul>
-								<li>text list text list text list text list</li>
-								<li>text list text list text list text list</li>
-							</ul>
-						</div>
-	
-						<br>
-						<div class="txt-list dot">
-							<ul>
-								<li>dot text list dot text list dot text list dot text list</li>
-								<li>dot text list dot text list dot text list dot text list</li>
-							</ul>
-						</div>
-	
-						<br>
-						<div class="txt-list bullet">
-							<ul>
-								<li>bullet text list bullet text list bullet text list bullet text list</li>
-								<li>bullet text list bullet text list bullet text list bullet text list</li>
-							</ul>
-						</div>
-					</div>
-					<!-- //List -->
-				</div>
+                        <!-- Title -->
+                        <div class="tmp-guide-box guide-btn">
+                            <h2 class="guide-box-tit">Description</h2>
 
-			</div>
-		</section>
-	</div>
-	
-	<script type="text/javascript">
+                            <p class="desc-xs"><b>xs 10px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <br />
+                            <p class="desc-sm"><b>sm 12px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <br />
+                            <p class="desc"><b>default 14px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <br />
+                            <p class="desc-xl"><b>md 16px</b>본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <br />
+                            <p class="desc-xl"><b>xl 20px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                        </div>
+                        <!-- //Title -->
 
-	</script>
-</body>
+                        <!-- List -->
+                        <div class="tmp-guide-box guide-btn">
+                            <h2 class="guide-box-tit">List</h2>
+                            <h3>xs - 12px</h3>
+                            <ul class="list xs">
+                                <li>리스트 xs 리스트 xs</li>
+                                <li>리스트 xs 리스트 xs</li>
+                                <li>리스트 xs 리스트 xs</li>
+                            </ul>
+                            <h3>sm - 14px</h3>
+                            <ul class="list sm">
+                                <li>리스트 sm 리스트 sm</li>
+                                <li>리스트 sm 리스트 sm</li>
+                                <li>리스트 sm 리스트 sm</li>
+                            </ul>
+                            <h3>sm - 16px</h3>
+                            <ul class="list md">
+                                <li>리스트 md 리스트 md</li>
+                                <li>리스트 md 리스트 md</li>
+                                <li>리스트 md 리스트 md</li>
+                            </ul>
+                            <h3>numeric(숫자형)</h3>
+                            <ol class="list numeric">
+                                <li>숫자형 리스트 숫자형 리스트</li>
+                                <li>숫자형 리스트 숫자형 리스트</li>
+                                <li>숫자형 리스트 숫자형 리스트</li>
+                            </ol>
+                        </div>
+                        <!-- //List -->
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <script type="text/javascript"></script>
+    </body>
 </html>
