--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -34,6 +34,18 @@ html.is-open, html.is-open body {
         left: 0;
         background: rgba(#000, 0.8);
     }
+	.layer-close{
+		position:absolute;
+		top:16px;
+		right:unset;
+		left:16px;
+	}
+	&:not(.type-bottom,.type-full){
+		.layer-close{
+			right:16px;
+		}
+	}
+
 	&:not(.type-bottom) .layer-container {
 		background:#fff;
 	}
@@ -44,7 +56,6 @@ html.is-open, html.is-open body {
         flex-direction: column;
         width: 100%;
         max-height: 100%;
-        // background: #fff;
 		border-radius: $border-radius-20;
         .layer-header {
             max-height: 66px;
@@ -57,15 +68,9 @@ html.is-open, html.is-open body {
                 font-size:$font-xl;
                 font-weight: 500;
             }
-            .layer-close {
-				display:inline-flex;
-                position: absolute;
-                top: 16px;
-                right: 16px;
-            }
         }
         .layer-body {
-            padding: 0 20px;
+            padding:24px 20px;
         }
         .layer-footer {
             padding: 20px 20px 30px;
@@ -92,10 +97,7 @@ html.is-open, html.is-open body {
             transition: transform 0.6s;
         }
     }
-    // type Bottom Sheet
-    &.type-bottom {
-        align-items: flex-end;
-        padding: 0;
+	&.type-bottom,&.type-full{
 		.layer-wrap{
 			display:flex;
 			flex-direction:column;
@@ -116,19 +118,21 @@ html.is-open, html.is-open body {
 				padding:0;
 			}
 		}
+	}
+    // type Bottom Sheet
+    &.type-bottom {
+        align-items: flex-end;
+        padding: 0;
 		.layer-header{
 			max-height: 66px;
-			padding:16px 20px 16px;
 			font-size:$font-lg;
 			font-weight:700;
 			border-bottom:1px solid $navy-020;
-			padding: 16px 20px 16px 50px;
-			text-indent:-30px;
+			padding: 14px 20px 14px 50px;
 			text-align:center;
-		}
-		.layer-close {
-			right:unset;
-			left:20px;
+			.title{
+				@include ell();
+			}
 		}
         &:before {
             opacity: 0;
@@ -194,46 +198,15 @@ html.is-open, html.is-open body {
 				.title{
 					width:100%;
 					height:100%;
-					padding:0 60px;
+					padding:0 56px;
 					border-bottom:1px solid #D9D9D9;
 					line-height:56px;
 					text-align:center;
 					@include ell;
 				}
-
-				.left{
-					display:flex;
-					position:absolute;
-					top:0;
-					left:20px;
-					height:100%;
-				}
-
-				.right{
-					display:flex;
-					position:absolute;
-					top:0;
-					right:20px;
-					height:100%;
-				}
 			}
 
 		}
-		.layer-body {
-			flex: 1;
-		}
-		.layer-footer {
-			position:relative;
-			z-index:5;
-			flex: 0 0 auto;
-			margin-top: auto;
-			padding:0;
-			
-			.btn-wrap{
-				padding:0;
-			}
-		}
-
         &:before {
 			opacity: 0;
             transition: opacity 0.3s cubic-bezier(1, 0, 1, 1);
@@ -256,11 +229,6 @@ html.is-open, html.is-open body {
             transition: transform 0.8s;
 			background:#fff;
         }
-		.layer-wrap{
-			overflow-y:auto;
-			scroll-behavior: smooth;
-			// -webkit-overflow-scrolling:touch;
-		}
 	}
 }
 	
