무료편도 예약하기

--- a/src/components/input.html
+++ b/src/components/input.html
@@ -175,6 +175,23 @@
 							</div>
 
 							<div class="ip-group">
+								<div class="row join">
+									<div class="module-ip">
+										<input type="text" class="ip-txt" placeholder="쿠폰 번호 입력">
+										<div class="line"></div>
+										<div class="module-ico">
+											<button type="button" class="btn-del">
+												<i class="ico delete lg"></i>
+											</button>
+										</div>
+									</div>
+									<div class="module-btn">
+										<button class="btn md">조회</button>
+									</div>
+								</div>
+							</div>
+
+							<div class="ip-group">
 								<label for="ip01" class="ip-label">롯데 이메일 계정 인증</label>
 								<div class="row mail-certi">
 									<div class="module-ip">
