--- a/src/components/text.html
+++ b/src/components/text.html
@@ -56,9 +56,9 @@
                         <div class="tmp-guide-box guide-btn">
                             <h2 class="guide-box-tit">Title</h2>
 
-                            <h1 class="title">Title1 20px</h1>
-                            <h1 class="title-md">Title2 18px</h1>
-                            <h1 class="title-sm">Title3 16px</h1>
+                            <h1 class="title">Title1 20px line-height 28px</h1>
+                            <h1 class="title-md">Title2 18px line-height 24px</h1>
+                            <h1 class="title-sm">Title3 16px line-height 24px</h1>
                         </div>
                         <!-- //Title -->
 
@@ -68,13 +68,13 @@
 
                             <p class="desc-xs"><b>xs 10px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
                             <br />
-                            <p class="desc-sm"><b>sm 12px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <p class="desc-sm"><b>sm 12px line-height 16px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
                             <br />
-                            <p class="desc"><b>default 14px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <p class="desc"><b>default 14px line-height 20px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
                             <br />
-                            <p class="desc-xl"><b>md 16px</b>본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <p class="desc-xl"><b>md 16px line-height 24px</b>본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
                             <br />
-                            <p class="desc-xl"><b>xl 20px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
+                            <p class="desc-xl"><b>xl 18px line-height 24px</b> 본문내용 본문내용 본문내용 본문내용 본문내용 본문내용</p>
                         </div>
                         <!-- //Title -->
 
