--- a/src/components/input.html
+++ b/src/components/input.html
@@ -205,76 +205,6 @@
 								<p class="error-txt">롯데 이메일 계정이 일치하지 않습니다</p>
 							</div>
 
-
-							------------------------------------------------------------------------------
-
-
-							<div class="ip-group">
-								<div class="row error">
-									<label for="fakePassword" class="ip-label">비밀번호</label>
-									<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
-									<div class="line"></div>
-									<span class="icon-group">
-										<button type="button" class="btn-del">
-											<i class="ico delete lg"></i>
-										</button>
-										<button id="toggler" type="button" class="ip-icon">
-											<i class="ico eye-on lg"></i>
-										</button>
-									</span>
-								</div>
-								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
-							</div>
-
-							<div class="ip-group certi">
-								<div class="row">
-									<input type="number" class="ip-txt">
-									<div class="line"></div>
-									<div class="icon-group">
-										<button type="button" class="btn-del">
-											<i class="ico delete lg"></i>
-										</button>
-										<span class="time">3:00</span>
-									</div>
-								</div>
-								<p class="error-txt">인증코드가 일치하지 않습니다</p>
-							</div>
-
-							<div class="ip-group card">
-								<div class="row">
-									<label for="card" class="ip-label">카드번호 입력</label>
-									<div class="ip-card-module">
-										<input id="card" type="text" class="ip-txt" data-pos="1" placeholder="1234" value="1234" maxlength="4">
-										<input type="text" class="ip-txt" data-pos="2" placeholder="0000" maxlength="4">
-										<input type="text" class="ip-txt" data-pos="3" placeholder="0000" maxlength="4">
-										<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
-										<div class="line"></div>
-										<button type="button" class="icon-group btn-del">
-											<i class="ico delete lg"></i>
-										</button>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<br>
-
-						<div class="ip-group">
-							<div class="row">
-								<input type="text" class="ip-txt" placeholder="이름">
-								<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
-								<div class="line"></div>
-							</div>
-						</div>
-
-						<br />
-						
-						<div class="ip-group">
-							<div class="row error">
-								<input type="text" class="ip-txt" required placeholder="이름">
-								<div class="line"></div>
-							</div>
-							<p class="error-txt">비밀번호가 일치하지 않습니다</p>
 						</div>
 
 					</div>
@@ -320,7 +250,17 @@
 							<option value="옵션3">옵션3</option>
 						</select>
 						<br><br>
-						
+					</div>
+					<!-- Select -->
+					
+					
+					<!-- input file -->
+					<div class="tmp-guide-box">
+						<h2 class="guide-box-tit">File</h2>
+						<!-- 
+							이미지 다중 선택 : multiple
+							aos : accept 갤러리 바로 접근
+						-->
 						<div style="height:180px">
 							<label for="photoAdd" class="photo-add">
 								<div class="module">
@@ -335,17 +275,6 @@
 								</div>
 							</label>
 						</div>
-					</div>
-					<!-- Select -->
-
-
-					<!-- input file -->
-					<div class="tmp-guide-box">
-						<!-- 
-							이미지 다중 선택 : multiple
-							aos : accept 갤러리 바로 접근
-						-->
-						<input type="file" multiple accept=image/*>
 					</div>
 
 				</div>
